# madlibs

./: .flake8  .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: python-app.yml
data/: fillers.json  templates.json  test_fillers.json  test_templates.json
madlibs/: __init__.py  constraints.py  core.py  domains.py  group.py  madlibs.py  template.py  utils.py
notebooks/: Usage and examples.ipynb
tests/: test_constraints.py  test_domains.py  test_madlibs.py  test_template.py  test_template_group.py
