[tool.poetry]
name = "madlibs"
version = "0.1.0"
description = ""
authors = ["Vivek Srikumar <svivek@cs.utah.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.11.1"
pylint = "^2.8.2"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.9.2"
mypy = "^0.812"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
flake8-annotations = "^2.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
branch = true
source = ["madlibs"]

[tool.coverage.report]
show_missing = true
fail_under = 95
